--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Sonarqube_Test.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Sonarqube_Test.yaml
@@ -40,5 +40,5 @@ pipeline:
                       sonar-scanner \
                         -Dsonar.projectKey=python-flask-project \
                         -Dsonar.sources=. \
-                        -Dsonar.host.url=http://35.206.188.23:9000 \
+                        -Dsonar.host.url=<+secrets.getValue("sonarqube_url")> \
                         -Dsonar.login=sqp_4701ae911823832500337f7290f45f173d610946
