Update pipeline Sonarqube Test

--- a/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Sonarqube_Test.yaml
+++ b/.harness/orgs/default/projects/SonarQube_Test_Project/pipelines/Sonarqube_Test.yaml
@@ -42,3 +42,9 @@ pipeline:
                         -Dsonar.sources=. \
                         -Dsonar.host.url=<+secrets.getValue("sonarqube_url")> \
                         -Dsonar.login=sqp_4701ae911823832500337f7290f45f173d610946
+                  failureStrategies:
+                    - onFailure:
+                        errors:
+                          - AllErrors
+                        action:
+                          type: MarkAsFailure
